[9/25/2019] - 10:36pm - fixed more mobile layout issues

--- a/src/components/Home/components/Education/Education.scss
+++ b/src/components/Home/components/Education/Education.scss
@@ -1,7 +1,5 @@
  .education-items ul {
     text-align: center;
-    margin: 0 auto 3vh auto;
-    width: 50%;
     list-style-type: none;
 }
 
