--- a/src/components/Home/components/Experience/Experience.scss
+++ b/src/components/Home/components/Experience/Experience.scss
@@ -1,7 +1,5 @@
 .experience-items ul {
     text-align: center;
-    margin: 0 auto 3vh auto;
-    width: 50%;
     list-style-type: none;
 }
 
@@ -11,6 +9,6 @@
 
 @media screen and (orientation: portrait) {
     .experience-items ul {
-        width: 70%;
+        width: auto;
     }
 }
