--- a/src/components/Home/components/Projects/Projects.scss
+++ b/src/components/Home/components/Projects/Projects.scss
@@ -1,7 +1,5 @@
 .projects-items ul {
-    text-align: left;
-    margin: 0 auto 3vh auto;
-    width: 50%;
+    text-align: center;
     list-style-type: none;
 }
 
@@ -11,6 +9,7 @@
 
 @media screen and (orientation: portrait) {
     .projects-items ul {
-        width: 70%;
+        text-align: left;
+        width: auto;
     }
 }
