--- a/src/components/Home/components/Technologies/Technologies.scss
+++ b/src/components/Home/components/Technologies/Technologies.scss
@@ -1,7 +1,5 @@
 .technologies-items ul {
     text-align: center;
-    margin: 0 auto 3vh auto;
-    width: 50%;
     list-style-type: none;
     columns: 2;
     -webkit-columns: 2;
